Update Delvers Guide to Beast World.json

--- a/Delvers Guide to Beast World.json
+++ b/Delvers Guide to Beast World.json
@@ -13209,7 +13209,7 @@
 			"source": "DGtBW",
 			"page": 296,
 			"level": 3,
-			"school": "evoction",
+			"school": "V",
 			"time": [
 				{
 					"number": 1,
